# biglinux-livecd

./: .directory  .gitignore  PLANNING.md  README.md  pyproject.toml
.audit/: files_read.txt  mypy.txt  mypy_livecd.txt  radon.txt  ruff_check.txt  ruff_format.txt  vulture.txt
biglinux-livecd/DEBIAN/: biglinux-livecd.mo  biglinux-livecd.pot  control  dpkg-divert  en.mo  en.po  es.po  languages  md5sums  postrm  preinst  pt.po  pt_BR.po
biglinux-livecd/etc/: casper.conf
biglinux-livecd/etc/sddm.conf.d/: relogin.conf
biglinux-livecd/etc/xdg/autostart/: live-big-autostart.desktop
biglinux-livecd/lib/live/config/: 0101-lightdm-big
biglinux-livecd/locale/: be.po  bg.json  bg.po  biglinux-livecd.pot  cs.json  cs.po  da.json  da.po  de.json  de.po  el.json  el.po  en.json  en.po  es.po  et.json  et.po  fi.json  fi.po  fr.json  fr.po  he.json  he.po  hr.json  hr.po  hu.json  hu.po  is.json  is.po  it.json  it.po  ja.json  ja.po  ko.json  ko.po  nl.json  nl.po  no.json  no.po  pl.json  (+18 more)
biglinux-livecd/usr/lib/biglinux-livecd/: integrity.py  kernel-options  language_suggestion_probe.py  live-state  storage-probe
biglinux-livecd/usr/lib/tmpfiles.d/: biglinux-livecd.conf
biglinux-livecd/usr/share/applications/: com.biglinux.calamares-config.desktop
biglinux-livecd/usr/share/biglinux/calamares/: main.py  (+1 more)
biglinux-livecd/usr/share/wayland-sessions/: livecd.desktop  livecdWayland.desktop
biglinux-livecd/usr/share/xsessions/: livecd.desktop  livecdXorg.desktop
l18n/: .pot  languages  pt.po
locale/: bg.po  cs.po  de.po  el.po  en.po  et.po  fr.po  hr.po  ko.po  no.po  pt-BR.po  sk.po  sv.po  uk.po
pkgbuild/: PKGBUILD  biglinux-livecd.install
tests/: test_calamares_configuration.py  test_desktop_settings.py  test_integrity.py  test_integrity_translations.py  test_integrity_wait_dialog.py  test_language_suggestion.py  test_livecd_keyboard.py  test_livecd_security.py  test_mypy_plugins.py  test_systemd_units.py  test_voice_cache.py
(+199 files in other folders)
